# compiladores_p1

./: CMakeLists.txt  README.md
src/examples/: CMakeLists.txt  analyze.c
src/include/: definitions.h  dictionary.h  doublebuffer.h  error.h  file.h  grammaranalyzer.h  lexanalizer.h  statetransition.h
src/lib/: CMakeLists.txt  dictionary.c  doublebuffer.c  error.c  file.c  grammaranalyzer.c  lexicalanalyzer.c  statetransition.c
src/tests/: CMakeLists.txt  dictionarytest.c  doublebuffertest.c  lexanalizertest.c  readchartest.c  statetransitiontest.c
